standardize scss thoughout leage pages

--- a/src/app/league-zone/divisions/division-dashboard/division-dashboard.component.html
+++ b/src/app/league-zone/divisions/division-dashboard/division-dashboard.component.html
@@ -5,7 +5,7 @@
   </div>
   <img
     class="division-header__image"
-    src="../../../assets/images/battle-zone/pdbls2.png"
+    [src]="getLogoUrl(logo)"
     alt="League logo"
   />
 </div>
