--- a/src/app/league-zone/league-teams/league-team-card/league-team-card.component.html
+++ b/src/app/league-zone/league-teams/league-team-card/league-team-card.component.html
@@ -36,7 +36,7 @@
       >
         <mat-icon>show_chart</mat-icon>
       </button>
-      <button [routerLink]="'../team/' + teamDetails.id">
+      <button [routerLink]="'../teams/' + teamDetails.id">
         <mat-icon>open_in_new</mat-icon>
       </button>
     </div>
