--- a/src/app/league-zone/divisions/division-dashboard/division-dashboard.component.scss
+++ b/src/app/league-zone/divisions/division-dashboard/division-dashboard.component.scss
@@ -1,6 +1,7 @@
 @use "../../../../styles/global.scss" as *;
 @use "../../../../styles/mixins" as *;
 @use "../../../../styles/mixins/buttons" as *;
+@use "../../league.mixins" as *;
 
 .widget {
   display: flex;
@@ -31,19 +32,7 @@
 }
 
 .division-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: var(--pdz-space-sm);
-  padding: var(--pdz-space-sm);
-  background-color: pdz-color(surface-container-low);
-  border-bottom: 2px solid pdz-color(primary);
-
-  @include respond-above(medium) {
-    flex-direction: row;
-    justify-content: space-between;
-    padding: var(--pdz-space-sm) var(--pdz-space-lg);
-  }
+  @include pdz-league-page-header-large();
 
   &__info {
     display: flex;
@@ -78,7 +67,8 @@
 
   &__image {
     max-width: 12rem;
-    max-height: 6rem;
+    height: 100%;
+    max-height: 8rem;
     object-fit: contain;
     filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.3));
 
