--- a/src/app/league-zone/league-standings/league-standings.component.scss
+++ b/src/app/league-zone/league-standings/league-standings.component.scss
@@ -1,6 +1,45 @@
-.standing-wrapper {
-  padding: var(--pdz-space-lg);
+@use "../../../styles/global.scss" as *;
+@use "../../../styles/mixins" as *;
+@use "../league.mixins" as *;
+
+:host {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.standings {
   display: flex;
-  flex-wrap: wrap;
-  column-gap: 1rem;
+  flex-direction: column;
+  height: 100%;
+  overflow: auto;
+
+  &__header {
+    @include pdz-league-page-header();
+  }
+
+  &__back {
+    @include pdz-league-page-back-button();
+  }
+
+  &__title {
+    @include pdz-league-page-title();
+  }
+
+  &__body {
+    display: flex;
+    flex-wrap: wrap;
+    padding: var(--pdz-space-lg);
+    gap: 1rem;
+  }
+
+  &__empty {
+    @include apply-typography(body-lg);
+    color: var(--pdz-color-on-surface-variant);
+    margin: 0;
+
+    &--error {
+      color: var(--pdz-color-error);
+    }
+  }
 }
